# jobman

./: README.md  docker-compose.yml  pyproject.toml
configs/: scheduler.yaml
docker/: agent.Dockerfile  scheduler.Dockerfile
jobman/: agent.py  jobctl.py  scheduler.py
